--- a/style.css
+++ b/style.css
@@ -21,11 +21,11 @@ h1{
     font-size: 3rem;
 
 }
-h1{
+h2{
     font-size: 2rem;
 
 }
-h1{
+h3{
     font-size: 1.5rem;
 
 }
@@ -38,4 +38,84 @@ p{
 a{
     text-decoration: none;
     display: inline-block;
+}
+.container{
+    max-width: 1180px;
+    margin-inline: auto;
+    padding-inline:  var(--padding-inline-section);
+}
+.flex{
+    display: flex;
+    align-items: center;
+}
+ul{
+    list-style: none;
+}
+/*top banner styles*/
+.top-banner{
+    background-color:#4fb3d4;
+    background-image: url(assets/asset_32.png);
+    background-size: 300px;
+}
+    
+.banner-text{
+    color: #fff;
+    font-size: 0.75rem;
+    text-align: center;
+    padding: 15px 0;
+}
+
+/*navbar styles*/
+.main-nav{
+    margin-top: 20px;
+    justify-content: space-between;
+
+}
+    
+.logo img{
+    width: 200px;
+}
+
+.nav-links {
+    flex-basis:730px;
+}
+
+.nav-links ul{
+    justify-content: end;
+    gap: 40px;
+}
+.hover-link{
+    text-transform: capitalize;
+    color: var(--accent-color-dark);
+    transition: .2s ease-out;
+}
+.hover-link:hover{
+    color: var(--accent-color);
+}   
+
+.primary-btn{
+    background-color: var(--accent-color);
+    color: #fff !important;
+    border-radius: 6px;
+    font-weight: 700;
+    padding: 12px 24px;
+    box-shadow: 0 0 2px var(--secondary-text-color);
+    transition: .2s ease-in-out;
+   
+}
+.primary-btn:hover{
+    background-color: var(--accent-color-dark);
+}
+
+.secondary-btn{
+    border: 0.5px solid var(--secondary-text-color);
+    border-radius: 6px;
+    padding: 12px 24px;
+    color: var(--primary-text-color) !important;
+    font-weight: 700;
+    transition: .2s ease-in-out;  
+}
+.secondary-btn:hover{
+    background-color: var(--accent-color);
+    color:var(--accent-color)!important;
 }
