--- a/style.css
+++ b/style.css
@@ -119,3 +119,24 @@ ul{
     background-color: var(--accent-color);
     color:var(--accent-color)!important;
 }
+
+/*header section */
+header{
+    padding: 50px var(--padding-inline-section);
+}
+.header-section{
+    justify-content: center;
+    gap: 50px;
+}
+
+.header-left{
+    flex-direction: column;
+    gap: 10px;
+    align-items: start;
+    justify-content: center;
+}
+
+.header-right img{
+    width: 100%;
+}
+
